05-ARCHIVES/development-milestones/archives-collection/configurations/aia-production-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aia-production-ingress-ssl
  namespace: aia-production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "aia-production-ip"
    networking.gke.io/managed-certificates: "aia-ssl-cert-013atech"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    ingress.gcp.kubernetes.io/pre-shared-certs: "aia-ssl-cert-013atech"
    cloud.google.com/armor-config: '{"default-rule": {"action": "allow"}}'
    cloud.google.com/backend-config: '{"default": "aia-backend-config"}'
spec:
  rules:
  - host: 013a.tech
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-backend-service-simple
            port:
              number: 8000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-frontend-service
            port:
              number: 80
  - host: www.013a.tech
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-backend-service-simple
            port:
              number: 8000
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-frontend-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aia-frontend-service-lb
  namespace: aia-production
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "aia-frontend-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: aia-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
